dark mode na view-profile, sredjivanje callback bug-a, kad se logujes preko gugla ne odvede te na pocetnu, i malo sredjivanja landing page-a

--- a/app/globals.css
+++ b/app/globals.css
@@ -101,6 +101,12 @@
   }
 }
 
+@media (pointer: coarse) {
+  .group:hover .group-hover\:opacity-100 {
+    opacity: 0 !important;
+  }
+}
+
 /* Custom animations */
 @layer utilities {
   .animate-shake {
